<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/firstCard"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#000000"
            app:strokeWidth="2dp"
            app:cardCornerRadius="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:id="@+id/firstImage"
                android:scaleType="centerCrop" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="63dp"
            android:layout_marginRight="32dp"
            app:cardBackgroundColor="#28AF10"
            app:cardCornerRadius="300dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/secondCard"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstCard"
            app:layout_constraintVertical_bias="0.471">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="42dp"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_favorite_border_24" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/secondCard"
            app:layout_constraintTop_toBottomOf="@+id/firstCard"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:strokeColor="#000000"
            app:strokeWidth="2dp"
            app:cardCornerRadius="5dp">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:id="@+id/secondImage"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/title_description"
                android:layout_marginTop="30dp"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_marginLeft="195dp"
                android:scrollHorizontally="false"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/rating_description"
                android:layout_marginTop="140dp"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="195dp"
                android:textColor="#FFC107"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_description"
                android:layout_marginTop="230dp"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="195dp"
                android:textColor="#424141"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/thirdCard"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/secondCard"
            app:strokeColor="#000000"
            app:strokeWidth="2dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/overview_description"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:textSize="18sp"
                android:maxLines="10"
                android:ellipsize="end"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="10dp"
            android:id="@+id/fourthCard"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="500dp"
            app:layout_constraintTop_toBottomOf="@id/thirdCard"
            app:strokeColor="#000000"
            app:strokeWidth="2dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/review"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/reviews"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/user"
                android:text="@string/username"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="#E8080F"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/author"
                android:text="@string/no_user_present"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:textColor="#E8080F"
                android:layout_marginLeft="125dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/review_description"
                android:text="@string/no_reviews_present"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:textSize="18sp"
                android:layout_height="match_parent"
                android:maxLines="15"
                android:ellipsize="end"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>